# nutrition-food-environment-index

./: .gitignore  404.html  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/availability/: index.html
api/color/: index.html
api/density/: index.html
api/diversity/: index.html
api/scaling/: index.html
api/spatial/: index.html
api/validation/: index.html
docs/: getting-started.md  index.md  methodology.md
docs/api/: availability.md  color.md  density.md  diversity.md  scaling.md  spatial.md  validation.md
docs/examples/: nfei_end_to_end_example.ipynb
docs/overrides/partials/: copyright.html
docs/stylesheets/: extra.css
examples/nfei_end_to_end_example/: index.html
getting-started/: index.html
methodology/: index.html
search/: search_index.json
src/nfei/: __init__.py  availability.py  color.py  density.py  diversity.py  scaling.py  spatial.py  validation.py
tests/: test_availability.py  test_color.py  test_density.py  test_diversity.py  test_public_api.py  test_scaling.py  test_spatial.py  test_validation.py
