[project]
name = "nfei"
version = "0.1.0"
description = "A Python toolkit for computing nutrition-sensitive food environment indicators from spatial and survey data."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Tosin Akingbemisilu" }
]
license = { text = "MIT" }
keywords = [
  "food environment",
  "nutrition",
  "geospatial analysis",
  "indicator construction",
  "public health",
  "food systems"
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "geopandas>=0.14",
  "shapely>=2.0",
  "scikit-learn>=1.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "build>=1.2",
  "twine>=5.0",
  "jupyter>=1.0",
  "ipykernel>=6.0"
]

[project.urls]
Homepage = "https://github.com/tosmartak/nutrition-food-environment-index"
Repository = "https://github.com/tosmartak/nutrition-food-environment-index"
Issues = "https://github.com/tosmartak/nutrition-food-environment-index/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88